[gd_scene load_steps=3 format=3 uid="uid://cax25b6y067d"]

[ext_resource type="Script" uid="uid://k31k4o2ltk53" path="res://scenes/patterns/state_machine/state_pattern_main.gd" id="1_1f23w"]
[ext_resource type="PackedScene" uid="uid://b7v4yq2wkl8j" path="res://scenes/patterns/state_machine/traffic_light.tscn" id="2_abcde"]

[node name="StateMachineExample" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1f23w")

[node name="TrafficLight" parent="." instance=ExtResource("2_abcde")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -75.0
offset_right = 25.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentStateLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 470.0
offset_bottom = 36.0
text = "Current State: NONE"
horizontal_alignment = 1

[node name="TransitionButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 100.0
offset_right = 75.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
text = "Next State"

[node name="ReturnToMainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 40.0
text = "<"

[connection signal="pressed" from="ReturnToMainMenuButton" to="." method="_on_return_to_main_menu_button_pressed"]
